[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://menu.png" type="Texture" id=2]
[ext_resource path="res://new.png" type="Texture" id=3]
[ext_resource path="res://new1.png" type="Texture" id=4]
[ext_resource path="res://load.png" type="Texture" id=5]
[ext_resource path="res://load1.png" type="Texture" id=6]
[ext_resource path="res://Exit.png" type="Texture" id=7]
[ext_resource path="res://exit1.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.814514
margin_top = -0.814514
margin_right = 0.814453
margin_bottom = -0.814514
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -615.0
margin_bottom = -446.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 408.0
margin_bottom = 302.0
custom_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 160.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 69.0
margin_top = 162.0
margin_right = 339.0
margin_bottom = 194.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 39

[node name="NewGame" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="LoadGame" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 167.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 270.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 8 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
